added a google font

--- a/Develop/Assets/style.css
+++ b/Develop/Assets/style.css
@@ -11,8 +11,11 @@ body {
     margin: 0;
         
     background: #222;
-    }
     
+    font-family: 'Merriweather Sans', sans-serif;
+
+    }
+
   .card {
         background: #eaeaea;
         padding: 2em;
