--- a/Develop/Assets/style.css
+++ b/Develop/Assets/style.css
@@ -11,16 +11,53 @@ body {
     margin: 0;
         
     background: #222;
-    
-    font-family: 'Merriweather Sans', sans-serif;
 
+    font-family: 'Merriweather Sans', sans-serif;
     }
 
   .card {
-        background: #eaeaea;
+        background: 000000d0;
+        color: white;
         padding: 2em;
         border-radius: 30px;
         width: 100%;
         max-width: 420px;
         margin: 1em;
+    }
+
+    .search {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    button {
+        margin: 0.5em;
+        border-radius: 50%;
+        border: none;
+        height: 46px;
+        width: 46px;
+        outline: none;
+        background: #7c7c7c2b;
+        color: white;
+        cursor: pointer;
+        transition: 0.2s ease-in-out;
+    }
+    
+    input.search-bar {
+        border: none;
+        outline: none;
+        padding: 0.5em 1em;
+        border-radius: 24px;
+        background: 7c7c7c2b;
+        bckground: #7c7c7c2b;
+        background: #7c7c7c2b;
+        color: white;
+        font-family: inherit;
+        font-size: 120%;
+    }
+    
+    button:hover {
+        background: #7c7c7c6b;
     }
